--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   firebase_storage: ^10.3.7
   carousel_slider:
   google_fonts: ^3.0.1
+  shared_preferences: ^2.0.15
+  fluttertoast: ^8.0.9
+  modal_progress_hud_nsn: ^0.3.0
 
 dev_dependencies:
   flutter_test:
