--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.0.15
   fluttertoast: ^8.0.9
   modal_progress_hud_nsn: ^0.3.0
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
